v0.1.5
- The RP content is now properly hidden again
- Split the configuration panel in two columns
- Use the native Die2Nite tooltips
- Remove the soul distinctions scrollbar

v0.1.4
- Construction_max_ap now works with repairs
- The media links are now more intelligently replaced
- Show_spoil now works correctly with HTML child elements
- Fix issue with media link just before a spoil
- Add the auto-escort feature
- Add the escort auto good options feature
- Fix a bug making the extension considered you were not outside when at town
gates
- Now cache the session key at each page load
- Remove OEEV sync (RIP)

v0.1.3
- Fix a bug making the forum media links to sometimes not be replaced
- Fix the configuration panel z-index on the Spanish version
- Fix how the configuration panel is injected in the DOM
- Change the way the spoilers are shown

v0.1.2
- Fix a bug making the custom events sometimes fire their events after the
modules load
- The Chrome and Opera extensions are now localised
- Add the hability to show the spoilers without mouse hover
- Add the possibility to replace forum media links by the concerned media
(images, YouTube videos)
- The construction_max_ap module will not suggest more ap than the remaining for
each construction
- Fix the configuration panel help tooltip under Safari
- Fix DuskDawn sync support
- Fix MapViewer sync support

v0.1.1
- Re-enable Safari support
- Fix Safari cross-domain requests problem
- Add unit tests for sources/classes/{JS,Storage}.js
- More JavaScript code is now linted

v0.1.0
- Switch to Grunt to build the project
- Switch to the Lo-Dash template engine
- Set up JSHint and Travis-CI
- Set up the new module system
- The external tools sync button is more beautifuly integrated
- Add the possibility to drop all the bag content in one click while outside
- Fix a bug sometimes occuring and making the modules adding content to the
gamebody fail

v0.0.10
- Allow to block the Twitter share on the Gazette